Removed form-inline from searchbar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </button>
             
             <div class="collapse navbar-collapse ml-3 ml-sm-0 mb-0" id="yumboNavbar">
-                    <form class="search-bar form-inline d-flex my-2 my-lg-0 ml-sm-auto">
+                    <form class="search-bar d-flex my-2 my-lg-0 ml-sm-auto">
                         <input class="form-control mr-2 friendly-input" type="search" placeholder="Search Recipes..." aria-label="Search">
                         <button class="btn custom-btn friendly-btn" type="submit">Search</button>
                     </form>
