recipe_details and form

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'yumbo-home' %}"><h1>Yumbo</h1></a>
+                <a class="navbar-brand" href="index.html"><h1>Yumbo</h1></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#yumboNavbar">
                     <!-- Need to update this icon to a font awesome icon -->
@@ -42,91 +42,91 @@
         <div class="container rounded my-3">
             <div class="row mt-3">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="recipe-card-link" href="{% url 'recipe-detail' recipe.pk %}">
+                    <a class="recipe-card-link" href="recipe_detail.html">
                         <div class="col">
                             <div class="card mb-3 recipe-card">
                                 <img src="img/cheeseburger.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Cheeseburgers</h5>
                                     <p class="card-text">10 minutes</p>
-                                <!--  <a href="{% url 'recipe-detail' recipe.pk %}" class="btn btn-primary">Go somewhere</a> -->
+                                <!--  <a href="recipe_detail.html" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="recipe-card-link" href="{% url 'recipe-detail' recipe.pk %}">
+                    <a class="recipe-card-link" href="recipe_detail.html">
                         <div class="col">
                             <div class="card mb-3 recipe-card">
                                 <img src="img/slow-cooker-apricot-chicken-4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Apricot Chicken</h5>
                                     <p class="card-text">20 minutes</p>
-                                <!--  <a href="{% url 'recipe-detail' recipe.pk %}" class="btn btn-primary">Go somewhere</a> -->
+                                <!--  <a href="recipe_detail.html" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="recipe-card-link" href="{% url 'recipe-detail' recipe.pk %}">
+                    <a class="recipe-card-link" href="recipe_detail.html">
                         <div class="col">
                             <div class="card mb-3 recipe-card">
                                 <img src="img/thaichickencurry-9.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Thai Coconut Curry</h5>
                                     <p class="card-text">1 hour</p>
-                                <!--  <a href="{% url 'recipe-detail' recipe.pk %}" class="btn btn-primary">Go somewhere</a> -->
+                                <!--  <a href="recipe_detail.html" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="recipe-card-link" href="{% url 'recipe-detail' recipe.pk %}">
+                    <a class="recipe-card-link" href="recipe_detail.html">
                         <div class="col">
                             <div class="card mb-3 recipe-card">
                                 <img src="img/Mongolian_Beef.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Mongolian Beef</h5>
                                     <p class="card-text">2 hours</p>
-                                <!--  <a href="{% url 'recipe-detail' recipe.pk %}" class="btn btn-primary">Go somewhere</a> -->
+                                <!--  <a href="recipe_detail.html" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="recipe-card-link" href="{% url 'recipe-detail' recipe.pk %}">
+                    <a class="recipe-card-link" href="recipe_detail.html">
                         <div class="col">
                             <div class="card mb-3 recipe-card">
                                 <img src="img/Vegan-Enchiladas.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Vegan Enchiladas</h5>
                                     <p class="card-text">10 minutes</p>
-                                <!--  <a href="{% url 'recipe-detail' recipe.pk %}" class="btn btn-primary">Go somewhere</a> -->
+                                <!--  <a href="recipe_detail.html" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="recipe-card-link" href="{% url 'recipe-detail' recipe.pk %}">
+                    <a class="recipe-card-link" href="recipe_detail.html">
                         <div class="col">
                             <div class="card mb-3 recipe-card">
                                 <img src="img/TeriyakiCauliBowls.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Teriyaki Cauliflower</h5>
                                     <p class="card-text">10 minutes</p>
-                                <!--  <a href="{% url 'recipe-detail' recipe.pk %}" class="btn btn-primary">Go somewhere</a> -->
+                                <!--  <a href="recipe_detail.html" class="btn btn-primary">Go somewhere</a> -->
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                    <a class="recipe-card-link" href="{% url 'create-recipe' %}">
+                    <a class="recipe-card-link" href="recipe_form.html">
                         <div class="card mb-3 mt-2 recipe-card" id="new-recipe-card">
                                 <svg viewBox="0 0 16 16" class="bi bi-plus-circle mx-auto my-5" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                     <path fill-rule="evenodd" d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"/>
