--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="col-md-6 offset-md-0">
-                    <a href="{% url 'delete-recipe' recipe.pk %}" class="btn btn-lg custom-btn danger-btn float-md-end ml-md-1 mt-md-2 order-xs-2 order-md-1">Delete Recipe</a>
+                    <a href="delete_recipe.html" class="btn btn-lg custom-btn danger-btn float-md-end ml-md-1 mt-md-2 order-xs-2 order-md-1">Delete Recipe</a>
                     <a href="recipe_form.html" class="btn btn-lg custom-btn friendly-btn float-md-end me-1 mt-md-2 order-xs-1 order-md-2">Edit Recipe</a>
                 </div>
 
