--- a/recipe_form.html
+++ b/recipe_form.html
@@ -31,7 +31,7 @@
                         </form>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" href="{% url 'logout' %}">Log Out</a>
+                                <a class="nav-link active" href="logout.html">Log Out</a>
                             </li>
                         </ul>
                     </div>        
