--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                                 <a class="nav-link active" href="login.html">Log In</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="{% url 'logout' %}">Register</a>
+                                <a class="nav-link active" href="register.html">Register</a>
                             </li>
                         </ul>
                     </div>        
