--- a/login.html
+++ b/login.html
@@ -80,11 +80,11 @@
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-10 offset-1">
-                                        <button class="btn custom-btn friendly-btn btn-block my-2">Log In</button>
+                                        <a href="index.html" class="btn custom-btn friendly-btn btn-block my-2">Log In</a>
                                         <div class="border-top py-2">
                                             <p class="text-muted">
                                                 Need an account?
-                                                <a href="/register/" class="ml-2">Sign up!</a>
+                                                <a href="register.html" class="ml-2">Sign up!</a>
                                             </p>
                                         </div>
                                     </div>
